--- a/Readme
+++ b/Readme
@@ -4,5 +4,5 @@ FastCapture is a basic but good tool for testers as well as ordinary users to ta
 FastCaptureSetup.exe is the installation file!
 
 Current file version 0.0.1.1!
-Official web page https://softwarefortesting.com/
+Official web page https://www.hurryshare.com/softwares/details?user=fQfjWXXOxdeZBwhoP3VIxkbPJLO2&software=FASTCAPTURE
 
